Fixes to settings converting on update, working reset

--- a/src/common/options.css
+++ b/src/common/options.css
@@ -48,6 +48,7 @@ a,
 input#export,
 input#import,
 input#reset,
+input#resetrecommended,
 input#importbutton,
 input#importpicker,
 input#requestall,
