--- a/src/common/options.css
+++ b/src/common/options.css
@@ -7,26 +7,9 @@ body {
     background-color: var(--body-back-color);
 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
-/*
-// Color scheme
-@media (prefers-color-scheme: light) {
-    body {
-        --body-text-color: #000;
-        --body-back-color: #ffffff;
-        --body-text-alt-color: #7d7d7d;
-    }
+    min-width: 450px;
 }
-
-@media (prefers-color-scheme: dark) {
-    body {
-        --body-text-color: #f4f4f4;
-        --body-back-color: #23222b;
-        --body-text-alt-color: #a3a2a7;
-    }
-}
-*/
 
 h3,
 label,
