--- a/src/chrome/colour_scheme.css
+++ b/src/chrome/colour_scheme.css
@@ -3,6 +3,13 @@
         --body-text-color: #000;
         --body-back-color: #ffffff;
         --body-text-alt-color: #7d7d7d;
+        --body-text-alt2-color: #f4f4f4;
+        --border-color: #bfbfc9;
+        --box-shadow-level-1: 0 0 1px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.2);
+        --background-color-canvas: #f0f0f4;
+        --color-accent-primary: #0c54c6;
+        --color-accent-primary-hover: oklch(48% 0.2 260);
+        --color-accent-primary-active: oklch(41% 0.17 260);
     }
 }
 
@@ -11,5 +18,10 @@
         --body-text-color: #f4f4f4;
         --body-back-color: rgb(32, 33, 36); /* --google-grey-900 */
         --body-text-alt-color: #a3a2a7;
+        --body-text-alt2-color: #000;
+        --border-color: #5b5b66;
+        --box-shadow-level-1: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 2px rgba(0, 0, 0, 0.4);
+        --background-color-canvas: #292a2d;
+        --color-accent-primary: #b1cdfb;
     }
 }
